k8s/infrastructure/controllers/cert-manager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    trust-manager.cert-manager.io/inject-trust: "true"
