k8s/infrastructure/controllers/cert-manager/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app: webhook
  ingress:
  - fromEntities:
    - kube-apiserver
